fixed overflow-behaviour of header__link (phone number)

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -19,6 +19,10 @@
   }
 }
 
+.header__link-wrapper {
+  max-width: 165px;
+}
+
 .header__link {
   text-align: end;
   font-family: "Bebas Neue", "Arial", sans-serif;
